refactor(docker): use local dockerfile for service build
- Updates the `docker-compose.yml` to build the `spark-dev` service image from the local Dockerfile instead of pulling a pre-built image from a public registry.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   spark-dev:
-    image: python:3.13-slim
+    build: .
     container_name: spark-dev-container
     working_dir: /app
     volumes:
