--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ description = "Data Lakehouse Project"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "arxiv>=2.2.0",
     "boto3>=1.40.1",
     "pyspark==3.4.1",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
+    "ruff>=0.12.7",
 ]
