refactor(compose): improve volume mount for development
- Changes the volume mount from the entire project directory ('.') to only the source code directory ('./src').
- This is a best practice that prevents the host development environment (e.g., .git, README) from overwriting files inside the container, ensuring a cleaner and more isolated setup.
- The build definition was also updated to the more explicit object syntax.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 services:
   spark-dev:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: spark-dev-container
     working_dir: /app
     volumes:
-      - .:/app
+      - ./src:/app/src
     env_file:
       - .env
     command: tail -f /dev/null
