docs(config): add SPARK_PACKAGES to example env file
- Updates the .env.example file to include the SPARK_PACKAGES variable.
- This variable is now required by the Makefile to correctly submit Spark jobs with the necessary dependencies for Iceberg and S3 access.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ AWS_ACCESS_KEY_ID=your-access-key-id
 AWS_SECRET_ACCESS_KEY=your-secret-access-key
 AWS_REGION=your-region
 S3_BUCKET_NAME=your-unique-bucket
+SPARK_PACKAGES=org.apache.iceberg:iceberg-spark-runtime-3.4_2.12:1.4.2,software.amazon.awssdk:bundle:2.17.257,org.apache.hadoop:hadoop-aws:3.3.4
