--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "boto3>=1.40.1",
+    "pandas>=2.3.1",
+    "pyarrow>=21.0.0",
     "pyspark==3.5.1",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
