--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
+boto3==1.40.1
+botocore==1.40.1
+certifi==2025.7.14
+charset-normalizer==3.4.2
+idna==3.10
+jmespath==1.0.1
+numpy==2.3.2
+pandas==2.3.1
+py4j==0.10.9.7
+pyarrow==21.0.0
 pyspark==3.5.1
-boto3
-requests
-python-dotenv
-ruff
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+requests==2.32.4
+ruff==0.12.7
+s3transfer==0.13.1
+six==1.17.0
+tzdata==2025.2
+urllib3==2.5.0
