--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "boto3>=1.40.1",
     "pandas>=2.3.1",
     "pyarrow>=21.0.0",
+    "pydantic>=2.11.7",
     "pyspark==3.5.1",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
