--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 boto3==1.40.1
 botocore==1.40.1
 certifi==2025.7.14
@@ -8,6 +9,8 @@ numpy==2.3.2
 pandas==2.3.1
 py4j==0.10.9.7
 pyarrow==21.0.0
+pydantic==2.11.7
+pydantic-core==2.33.2
 pyspark==3.5.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
@@ -16,5 +19,7 @@ requests==2.32.4
 ruff==0.12.7
 s3transfer==0.13.1
 six==1.17.0
+typing-extensions==4.14.1
+typing-inspection==0.4.1
 tzdata==2025.2
 urllib3==2.5.0
