--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "lakehouse-from-scratch"
 version = "0.1.0"
@@ -10,7 +14,13 @@ dependencies = [
     "pyarrow>=21.0.0",
     "pydantic>=2.11.7",
     "pyspark==3.5.1",
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "pytest-mock>=3.14.1",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "ruff>=0.12.7",
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
