--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,23 @@ boto3==1.40.1
 botocore==1.40.1
 certifi==2025.7.14
 charset-normalizer==3.4.2
+coverage==7.10.2
 idna==3.10
+iniconfig==2.1.0
 jmespath==1.0.1
 numpy==2.3.2
+packaging==25.0
 pandas==2.3.1
+pluggy==1.6.0
 py4j==0.10.9.7
 pyarrow==21.0.0
 pydantic==2.11.7
 pydantic-core==2.33.2
+pygments==2.19.2
 pyspark==3.5.1
+pytest==8.4.1
+pytest-cov==6.2.1
+pytest-mock==3.14.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
