test(pytest): add custom marker for quality tests
- Configures a custom `quality` marker for pytest within the `pyproject.toml` file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,8 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.pytest.ini_options]
+markers = [
+    "quality: marks tests as data quality tests (slow, requires pipeline run)",
+]
