ci(github): exclude quality tests from default ci run
- Updates the CI pipeline to add the `-m "not quality"` flag to the `pytest` command.
- This change separates the fast unit and integration tests from the slower, resource-intensive data quality tests, ensuring the main CI pipeline provides faster feedback to developers.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Run tests and generate coverage report
         run: |
-          pytest --cov --cov-branch --cov-report=xml tests/
+          pytest --cov --cov-branch --cov-report=xml -m "not quality" tests/
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
