--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.13"
 dependencies = [
     "boto3>=1.40.1",
     "pandas>=2.3.1",
+    "pre-commit>=4.3.0",
     "pyarrow>=21.0.0",
     "pydantic>=2.11.7",
     "pyspark==3.5.1",
