fix(ci): correct unsupported configurations in workflow
This commit adjusts the CI workflow and the `databricks.yml` file to resolve errors caused by unsupported settings.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
-          databricks bundle deploy -t dev -v wheel_file_name="${{ env.WHEEL_NAME }}"
+          databricks bundle deploy -t dev --var "wheel_file_name=${{ env.WHEEL_NAME }}"
 
       - name: Run pipeline (bronze→silver→gold→qa)
         env:
